objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Article_Number__c</fullName>
        <inlineHelpText>Used by Distribution</inlineHelpText>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Factored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipment_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measurement__c</fullName>
        <inlineHelpText>Quantity over Y1 + Y2 + Y3 that will yield total revenue for given unit of measure.</inlineHelpText>
        <label>Unit of Measurement</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilometer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linear Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linear Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thousand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>